before doaa